<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoffeeOrder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latte">Latte</string>
    <string name="americano">Americano</string>
    <string name="brewed">Brewed</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="espresso">Espresso</string>
    <string name="macchiato">Macchiato</string>

</resources>
