<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OrderActivity">

    <ImageView
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.5">
    </ImageView>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="Please make an order."
            android:textSize="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <GridLayout
                android:id="@+id/gridCoffeeChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchMode="spacingWidth"
                android:verticalSpacing="5dp"
                android:horizontalSpacing="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:columnCount="4"
                android:padding="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:rowCount="3">
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonLatte"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/latte_action"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/latte"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonCappuccino"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/cappuccino_action"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/cappuccino"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonBrewed"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:src="@drawable/brewed_action"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/brewed"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonAmericano"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:src="@drawable/americano_action"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/americano"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonEspresso"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:src="@drawable/espresso_action"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/espresso"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:id="@+id/buttonMacchiato"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:src="@drawable/macchiato_action"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/macchiato"/>
        </GridLayout>
        <EditText
            android:id="@+id/customerName"
            android:hint="NAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:enabled="false"
            android:id="@+id/orderButton"
            android:text="Order!"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
